{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Movement",
            "id": "c51088cb-d5ed-4803-8d45-a508157667c3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "efd94aa1-b8b8-49c4-a8e9-7673df0cc0c9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "905b6a6b-0dec-4995-816a-f3a5772e6a9a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "eb69145b-48be-4ce3-9b66-6b4f8be670e5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d4169058-5cd8-40a3-a811-79b8900b7fed",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d8f5d09c-76d8-4189-baf2-1e6c58cf48b5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fbfe2a20-6e0b-42c3-b9ac-6b065ba7aa98",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Capacity",
            "id": "1ad1369f-3054-4487-84cc-92a46f61278a",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "b7d95e2b-6e6e-454d-93f7-3859ed6db663",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Capacity1",
                    "type": "Button",
                    "id": "69b3dbeb-9d62-4040-8069-29ece82405be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Capacity2",
                    "type": "Button",
                    "id": "60258e78-bf49-4b65-98b6-960321c73b0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ultime",
                    "type": "Button",
                    "id": "4066f0d7-3890-4e93-b91d-2252531678e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "31ef5a54-20fe-4f1b-a2ab-ff4c933f194a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Capacity2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d81835f5-f080-4ee4-b222-4b33eac0df33",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ultime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f56615d0-90a6-463f-994e-502b8893177b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfccd1af-df03-4fdc-990f-4d6028599b7f",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Capacity1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "a4aaa245-b2ed-47a0-8198-60dc0e3814b8",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "5583577e-212b-4229-8f35-767d3b363e29",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4160847-8b2c-4ce0-96ab-e893d29898ff",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "b55d1e97-bcae-49d9-a58e-d2726b5a7a44",
            "actions": [
                {
                    "name": "ActivateItem0",
                    "type": "Button",
                    "id": "bdc6bcf8-4cd9-4fb5-a464-740314e5f01c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateItem1",
                    "type": "Button",
                    "id": "3cb8a159-c4b4-438d-9152-1f9995c2bfc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateItem2",
                    "type": "Button",
                    "id": "5a84e508-516f-491e-97dd-8a3583ae9242",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowHideInventory",
                    "type": "Button",
                    "id": "73214987-5c82-4e21-b9f7-b8d034315521",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowHideShop",
                    "type": "Button",
                    "id": "72a46c12-496e-4aef-8ae1-e18543c2c934",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e81b6cf9-3bb5-4446-a473-b1d96db72a17",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateItem0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa3dcf4f-0dac-4b91-9b0b-f30b40fc56bc",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateItem1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c4bd197-fc82-43b5-a65f-ba9ed725faa3",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateItem2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d1dac06-959f-4fa4-807b-4cefa88ad282",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowHideInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b264447-1850-4e46-ac1c-613a70e87b5b",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowHideShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}